JumpScript/tests/baselines/reference/restParamModifier.errors.txt
tests/cases/compiler/restParamModifier.jump(2,27): error TS1005: ',' expected.


==== tests/cases/compiler/restParamModifier.jump (1 errors) ====
    class C {
        constructor(...public rest: string[]) {}
                              ~~~~
!!! error TS1005: ',' expected.
    }